# tux-rs

./: .gitignore  .pr_body.txt  AGENTS.md  CONTRIBUTING.md  Cargo.toml  InitialIdea.md  Justfile  README.md  default.nix  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
containers/runit-smoke/: Dockerfile  smoke.sh
docs/: ADDING_HARDWARE.md  architecture.md  feature_support_matrix.md  hardware_support.md
impl/: unified-tuxedo-uniwill.md
impl/2026-04-04-the_rewrite/: FOLLOW_UP.md  PROGRESS.md  README.md  WORKLOG_2026_06_04.md
impl/2026-04-11-nixos-support/: description.md  follow_up.toml  plan.md  stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  worklog-5.md  worklog.md
impl/2026-04-11-prepare_public/: description.md  follow_up.toml  plan.md  stage-1.md  stage-2.md  stage-4.md  worklog-3.md  worklog-4.md  worklog.md
impl/2026-04-12-daemon-deploy-fan-spike/: description.md  follow_up.toml  plan.md  review-1.md  stage-1.md  worklog-1.md  worklog.md
impl/2026-04-12-dinit-support/: description.md  follow_up.toml  plan.md  stage-1.md  stage-2.md  stage-3.md  worklog-1.md  worklog.md
impl/2026-04-12-remove-kmod-use-tuxedo-drivers/: description.md  follow_up.toml  plan.md  review-1-4.md  stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  stage-7.md  worklog.md
impl/2026-04-12-tui-event-log/: description.md  follow_up.toml  plan.md  review-1.md  review-2.md  stage-1.md  stage-2.md  worklog-1.md  worklog-2.md  worklog.md
nix/: nixos.nix  overlay.nix  tux-daemon.nix  tux-kmod.nix  tux-tui.nix
nixos/: default.nix
tools/: capture-uniwill-contract-fixture.sh
tux-core/: Cargo.toml
tux-core/src/: custom_device.rs  dbus_types.rs  device.rs  device_table.rs  dmi.rs  fan_curve.rs  lib.rs  platform.rs  profile.rs  registers.rs
tux-core/src/backend/: fan.rs  keyboard.rs  mod.rs  profile.rs  sensor.rs
tux-core/src/mock/: dmi.rs  fan.rs  mod.rs  sensor.rs  sysfs.rs
tux-daemon/: Cargo.toml
tux-daemon/src/: client_tracker.rs  config.rs  display.rs  fan_engine.rs  lib.rs  lifecycle.rs  main.rs  power_monitor.rs  profile_apply.rs  profile_store.rs  sleep.rs  tcc_import.rs
tux-daemon/src/charging/: clevo.rs  mod.rs  uniwill.rs
tux-daemon/src/cpu/: governor.rs  mod.rs  sampler.rs  tdp.rs
tux-daemon/src/dbus/: charging.rs  cpu.rs  device.rs  fan.rs  gpu_power.rs  keyboard.rs  mod.rs  profile.rs  settings.rs  system.rs  tcc_compat.rs
tux-daemon/src/gpu/: hwmon.rs  mod.rs  nb02.rs
tux-daemon/src/hid/: color_scaling.rs  discover.rs  hidraw.rs  ite8291.rs  ite8291_lb.rs  ite8297.rs  ite829x.rs  mod.rs  sysfs_kbd.rs
tux-daemon/src/platform/: clevo.rs  mod.rs  nb05.rs  sysfs.rs  td_clevo.rs  td_nb04.rs  td_nb05.rs  td_tuxi.rs  td_uniwill.rs  td_uw_fan.rs  tuxedo_io.rs  tuxi.rs  uniwill.rs
tux-daemon/tests/: contract_replay.rs  e2e.rs  fixture_schema.rs  init_system.rs  integration.rs
tux-daemon/tests/common/: mod.rs
tux-daemon/tests/fixtures/driver_contract/uniwill/: README.md  ibp1xi08mk1-hardware-v1.toml  sample-ibp16g8-v1.toml
tux-kmod/: Makefile  README.md  dkms.conf
tux-tui/: Cargo.toml
tux-tui/src/: bounded_index.rs  cli.rs  command.rs  dbus_client.rs  dbus_task.rs  event.rs  lib.rs  main.rs  model.rs  update.rs  view.rs
tux-tui/src/views/: charging.rs  dashboard.rs  display.rs  event_log.rs  fan_curve.rs  info.rs  keyboard.rs  mod.rs  power.rs  profiles.rs  settings.rs  webcam.rs
tux-tui/src/widgets/: form.rs  mod.rs
tux-tui/tests/: live_regression.rs
(+167 files in other folders)
