[workspace]
members = ["tux-core", "tux-daemon", "tux-tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/tuxedocomputers/tux-rs"

[workspace.dependencies]
tux-core = { path = "tux-core" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full", "test-util"] }
zbus = { version = "5", features = ["tokio"] }
nix = { version = "0.29", features = ["ioctl", "fs", "uio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sd-notify = "0.5"
anyhow = "1"
thiserror = "2"
inotify = "0.11"
tokio-stream = "0.1"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
color-eyre = "0.6"
serde_json = "1"
