[package]
name = "tux-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System daemon for TUXEDO laptop hardware control"

[features]
default = ["tcc-compat"]
tcc-compat = ["serde_json"]

[dependencies]
tux-core = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
futures-util = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sd-notify = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
inotify = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
serde_json = { workspace = true }
